# sarateal

./: .env.example  .gitignore  README.md  context_1.md  pyproject.toml  render.yaml  requirements.txt  scaffold.bat
app/: main.py
dashboard/: app.py
docs/: CHANGELOG.md  DEPLOYMENT.md  MANUAL_SMOKE_CHECK.md  VALIDATION_AND_ERRORS.md  mvp_run_commands.md
sarateal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: audit_wfp_price_matches.py  ingest_price_csv.py  ingest_wfp_kenya_prices.py  init_db.py  preview_wfp_kenya_prices.py  run_mvp.py  run_wfp_price_sync.py  seed_base_data.py  seed_demo_data.py  seed_wfp_product_aliases.py
tests/: conftest.py  test_api_crud_smoke.py  test_county_coordinates.py  test_county_weather.py  test_county_weather_api.py  test_geocoding.py  test_geocoding_api.py  test_health.py  test_http_csv_market_price_adapter.py  test_kenya_market_price_adapter.py  test_kenya_market_price_ingestion.py  test_location_coordinates.py  test_location_resolution.py  test_market_weather.py  test_market_weather_api.py  test_markets.py  test_match_generation.py  test_match_validation.py  test_mvp_products.py  test_nominatim_adapter.py  test_open_meteo_adapter.py  test_price_csv_adapter.py  test_price_csv_ingestion.py  test_price_ingestion.py  test_price_ingestion_alias_resolution.py  test_price_ingestion_api.py  test_prices.py  test_product_alias_model.py  test_scoring.py  test_service_duplicates.py  test_service_identity_duplicates.py  test_service_not_found.py  test_stored_location_model.py  test_stored_locations.py  test_stored_locations_api.py  test_supply_demand_validation.py  (+6 more)
(+92 files in other folders)
